feat: store/context/components

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=b72172f99d385ee31127670c92e177b7&plugin=AMap.StationSearch,AMap.PlaceSearch,AMap.ToolBar"></script>
+    <script src="//webapi.amap.com/ui/1.0/main.js"></script>
+
     <title>X-admin</title>
   </head>
   <body>
